style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

html, body {
  font-family: "Montserrat";
  color: var(--text-black);
  background-color: #EAEAEA;
}

:root {
  --text-black: rgb(45, 45, 45);
  --primary-pink: #e5a1aa;
}

/* .light-theme{
  --color-text: var(--color-text-light);
  --color-background: var(--color-background-light);
  --color-pink: var(--color-pink-light);
  --color-green: var(--color-green-light);
  --color-blue: var(--color-blue-light);
} */

/** Experience ----------------------------------------------------*/

.experience {
  position: fixed;
  width: 100vw;
  height: 100vh;
}

.experience-canvas {
  width: 100%;
  height: 100%;
}

/** Satellite Experience ------------------------------------------*/

.satellite-experience {
  display: flex;
  position: relative;
  margin-bottom: 200px;
  width: 40vw;
  height: 10vh;
}

.satellite-experience-canvas {
  width: 100%;
  height: 100%;
  /* margin-left: 40px; */
 }

 /* Phone Experience */

 .phone-experience {
  display: flex;
  position: relative;
  margin-bottom: 200px;
  width: 40vw;
  height: 10vh;
}

.phone-experience-canvas {
  width: 100%;
  height: 100%;
  /* margin-left: 40px; */
 }

/* Page Itself -------------------------------- */

.page {
  z-index: 99999;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.page-wrapper {
  position: relative;
}

/* Skills */
.skill {
  font-size: 16px;
  line-height: 1.8;
  font-weight: 200;
  color: var(--color-text);
  margin-left: 40px;
}

.skills-wrapper {
  margin-top: 64px;
}

/* Interests */
.interest {
  font-size: 24px;
  line-height: 1.8;
  font-weight: 200;
  color: var(--color-text);
  margin-left: 40px;
}

.interests-wrapper {
  margin-top: 64px;
}

/* Section Formatting -------------------------------- */

.section-margin {
  height: 250px;
  width: 100%;
}

.section {
  width: 50%;
  padding: 100px 4%;
  margin: 0;
  background-color: var(--primary-color);
  /* From https://css.glass */
  background: #e9e8e68d;
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(213, 198, 204, 0.3);
}

.section-group {
  width: 75%;
}
.section-group-bytelion {
  width: 100%;
  display: flex;
}

.section-heading {
  font-size: 18px;
  line-height: 1.8;
  margin-top: 48px;
  font-weight: 500;
  color: var(--color-text);
  margin-left: 40px;
}
.section-text {
  line-height: 2;
  margin-top: 18px;
  font-size: 16px;
  color: var(--color-text);
}

.section-title-text{
  display: block;
  font-size: 40px;
  font-weight: 500;
  z-index: 5;
  text-transform: uppercase;
  color: var(--color-pink);
}

.section-number{
  display: block;
  font-size: 18px;
  font-weight: 500;
  z-index: 5;
  text-transform: uppercase;
  color: var(--color-pink);
}

.section-company-position {
  font-size: 16px;
  line-height: 1.8;
  font-weight: 200;
  color: var(--color-text);
  margin-left: 40px;
}

.section-date {
  font-size: 14px;
  line-height: 1.8;
  font-weight: 200;
  color: var(--color-text);
  margin-left: 40px;
}

.section-work-description {
  font-size: 14px;
  line-height: 1.8;
  color: var(--color-text);
  margin-left: 40px;
  margin-top: 20px;
}

.left {
  margin-right: auto;
}

.right {
  margin-left: auto;
}

/* Hero ----------------------------------------- */

.hero {
  width: 100vw;
  height: 100vh;
}

.hero-wrapper {
  position: relative;
  height: 100%;
  width: calc(100% - 160px);
  margin: 0 auto;
  max-width: 1100px;
}

.hero-main {
  position: absolute;
  bottom: 168px;
  left: 0;
}

.hero-second {
  position: absolute;
  top: calc(50% );
  right: 0;
}

.hero-main-title{
  font-size: 64px;
  color: var(--color-text);
}
.hero-main-description {
  font-size: 18px;

}
.hero-second-subheading {
  font-size: 16px;
  text-transform: uppercase;
}

/* Progress bar */
.progress-bar { 
  position: fixed;
  z-index: 9999;
  width: 100%;
  height: 1.5%
}

.filled {
  width: 100%;
  z-index: 9999;
  height: 100%;
  background-color: rgb(39, 39, 39);
}

